updates to inference notebooks + abs residual tests

--- a/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
@@ -200,13 +200,13 @@ plt.legend()
 ```
 
 ```{code-cell} ipython3
-plt.loglog(freq_data, elf_data, c="C3", label="Avg. Atom")
+plt.loglog(freq_data, elf_data, c="C0", label="Avg. Atom")
 opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                        wavenum * AtomicUnits.length,
                        freq_data / AtomicUnits.energy,
                        lambda x: collisionrate(x, optresult.x)
                       )
-plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
+plt.plot(freq_data, opt_elf, c="C3", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar \omega$ [eV]")
 plt.ylim(1e-6) # resolution of data
@@ -346,7 +346,7 @@ prior_lims = [
     [0, 5],
     [0, 5],
     [0, 100],
-    [0, 200]
+    [0, 100]
 ]
 
 def logposterior(params):
@@ -545,4 +545,31 @@ plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylim(1e-6)
 plt.legend()
 # plt.savefig("../../reports/figures/mcmc_AAdata_ELFsamples")
+```
+
+```{code-cell} ipython3
+eps = Mermin(ElectronGas(t, d, dos_fn))
+# plot ELF for different parameters from MCMC sampling
+for ind in inds:
+    sample = flat_samples[ind]
+    plt.plot(freq_data,
+             elec_loss_fn(
+                 eps,
+                 wavenum * AtomicUnits.length,
+                 freq_data / AtomicUnits.energy,
+                 lambda x: collisionrate(x, sample)
+             ), 
+             "C1", 
+             alpha=0.1)
+# plot data
+plt.plot(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
+
+plt.ylabel("ELF [au]")
+plt.xlabel(r"$\hbar\omega$ [eV]")
+plt.xlim(0, 100)
+plt.legend()
+```
+
+```{code-cell} ipython3
+
 ```
