--- a/notebooks/exploratory/5.2-twh-inference-AAcollisions-absres.md
+++ b/notebooks/exploratory/5.2-twh-inference-AAcollisions-absres.md
@@ -12,9 +12,9 @@ kernelspec:
   name: python3
 ---
 
-# Bayesian Inference with Markov Chain Monte Carlo: Ideal Dataset
+# Bayesian Inference with Markov Chain Monte Carlo
 
-This notebook is roughly identical with `5.0-twh-....ipynb` except that the ELF data for this notebook is generated from our collision model _fit to Average Atom collision rate data_. In other words, the collision rate we are trying to find is exactly representable by our model, so we are testing the limits of the inversion process.
+So far, the analysis notebooks have examined inverting the ELF have used non-linear least squares. This works to some extent, but the resulting collision rate model parameters are very sensitive to the intial guess and the ELF itself is actually fairly independent of this choice. In this notebook, we use another tool called Bayesian inference to not find the single, best set of parameters for the collision rate model, but finds the _posterior_ distribution $p(\alpha|y_\mathrm{data})$ of sets of parameters $\alpha$ for a given set of data $y_\mathrm{data}$. Because the number of parameters we are searching for spans more than a hand-full of parameters for our model, we rely on Markov chain Monte Carlo to efficient sample from our probability distribution.
 
 ```{code-cell} ipython3
 # Load the "autoreload" extension so that code can change
@@ -37,7 +37,7 @@ from multiprocessing import Pool
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
-from src.inference.collision_models import collision_activate_decay
+from src.inference.collision_models import collision_activate_decay, drude, gendrude, logistic
 from src.inference.mcmc_inference import unique_hdf5_group
 from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
 
@@ -61,11 +61,11 @@ d = d_ang * AtomicUnits.length**3
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
 print(f"length of original data = {len(orig_freq_data)}")
-AA_collrate_data = datadump[1] + 1j * datadump[2]
+collrate_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
-# function for Average Atom collision rate
-AA_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collrate_data)
+# function for true collision rate
+true_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collrate_data)
 # function for DOS ratio
 dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
@@ -73,6 +73,28 @@ dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum = 1.5 # 1/[angstrom]
+```
+
+### Create ELF data with collision rate data
+
+```{code-cell} ipython3
+# true ELF data
+elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
+                        wavenum * AtomicUnits.length,
+                        freq_data / AtomicUnits.energy,
+                        true_collrate_fn
+                    )
+print(f"shape of ELF data = {elf_data.shape}")
+```
+
+### plot the collision rate data
+
+```{code-cell} ipython3
+plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, c="C0", label="real")
+plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
+plt.xlabel(r"$\omega$ [eV]")
+plt.ylabel("collision rate [au]")
+plt.legend()
 ```
 
 # Define collision rate model
@@ -88,45 +110,7 @@ def collisionrate(freq, params):
     return recollision + 1j * imcollision
 ```
 
-## Fit our collision rate model to AA collision rate
-
-Note that we are only fitting to the real part of the data.
-The imaginary part is found from Kramers-Kronig transformation.
-
-```{code-cell} ipython3
-# fit to data
-popt_AAcoll, pcov = optimize.curve_fit(
-    collision_activate_decay, 
-    freq_data / AtomicUnits.energy,
-    AA_collrate_fn(freq_data / AtomicUnits.energy).real,
-    (1,1,1,1),
-    bounds=(0, np.inf)
-)
-print(popt_AAcoll)
-
-# plot to compare
-plt.semilogx(freq_data, (AAcoll := AA_collrate_fn(freq_data / AtomicUnits.energy)).real, c="C3", label="AA")
-plt.plot(freq_data, AAcoll.imag, c="C3", ls="--")
-plt.plot(freq_data, (modelcoll := collisionrate(freq_data / AtomicUnits.energy, popt_AAcoll)).real, c="C0", label="opt")
-plt.plot(freq_data, modelcoll.imag, c="C0", ls="--")
-plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.ylabel("collision rate [au]")
-plt.legend()
-```
-
-### Create ELF data with our collision rate  model using parameters fit to mimic the average atom collision rate data
-
-```{code-cell} ipython3
-# true ELF data
-elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                        wavenum * AtomicUnits.length,
-                        freq_data / AtomicUnits.energy,
-                        lambda x : collisionrate(x, popt_AAcoll)
-                    )
-print(f"shape of ELF data = {elf_data.shape}")
-```
-
-# Define residual function for ELF data
+# Define residual function
 
 ```{code-cell} ipython3
 def residual_fn(
@@ -190,10 +174,10 @@ residual = partial(residual_fn,
                    Mermin(ElectronGas(t, d, dos_fn)),
                    wavenum * AtomicUnits.length,
                    collisionrate,
-                   type="rel"
+                   type="abs"
                   )
 # initial parameter guesses
-initparams = (1,1,1,1)
+initparams = (1, 1, 1, 1)
 
 # optimization results
 optresult = optimize.least_squares(residual, initparams, bounds=(0, np.inf), max_nfev=150)
@@ -205,16 +189,18 @@ optresult
 
 ```{code-cell} ipython3
 # original
-plt.semilogx(freq_data, collisionrate(freq_data / AtomicUnits.energy, popt_AAcoll).real, c="C3", label="true")
+plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, c="C3", label="Avg. Atom")
+plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C3", ls="--")
 # optimized
-plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.", ls="--")
+plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
+plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision rate [au]")
 plt.legend()
 ```
 
 ```{code-cell} ipython3
-plt.loglog(freq_data, elf_data, c="C3", label="true")
+plt.loglog(freq_data, elf_data, c="C3", label="Avg. Atom")
 opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                        wavenum * AtomicUnits.length,
                        freq_data / AtomicUnits.energy,
@@ -294,7 +280,7 @@ def loglikelihood(
         wavenum,
         collisionfn,
         params,
-        type="rel"
+        type="abs"
     )
         
     loglik = -np.max((residual / (np.sqrt(2) * cutoff))**2)
@@ -360,7 +346,7 @@ prior_lims = [
     [0, 5],
     [0, 5],
     [0, 100],
-    [0, 100]
+    [0, 200]
 ]
 
 def logposterior(params):
@@ -391,38 +377,40 @@ logposterior(optresult.x)
 We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
-samplesfile = "../../data/mcmc/mcmc_modeldata"
-dataset = "mcmc samples - model data - rel. residual - 4 params"
+samplesfile = "../../data/mcmc/mcmc_AAdata"
+dataset = "mcmc samples - AA data - abs. residual - 4 params"
 ```
 
 ```{code-cell} ipython3
 import h5py
 from datetime import datetime
+
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
-    "input data info" : f"""Data generated using collision rate model
-        fit to average atom data from file {datafile}. Uses updated
-        Kramers-Kronig transform for imaginary part of collisoin rate.""",
+    "input data info" : f"""Data generated using Average Atom 
+         collisions [T-matrix cross sections, nonideal DOS, QOZ structure
+         factors, LB form, inelastic processes], from file {datafile}. Uses updated
+         Kramers-Kronig transform for imaginary part of collisoin rate.""",
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
-    "collision rate model" : "collision_activate_decay, 4 parameters",
+    "collision rate model" : "collision_activate_decay, 4 parameter",
     "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
-    "residual" : "relative",
+    "residual" : "absolute",
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
 }
 
 # sampler properties
 ndim = 4 # number of parameters
 numchains = 32
-numsamples = 15_000
+numsamples = 35_000
 ```
 
 ```{code-cell} ipython3
 # # avoid overwriting datasets
 # dataset = unique_hdf5_group(samplesfile, dataset)
 backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
-backend.reset(numchains, ndim)
+# backend.reset(numchains, ndim)
 
 # randomly initialize chains within the boundaries
 rng = np.random.default_rng()
@@ -433,7 +421,7 @@ with Pool() as pool:
     sampler = emcee.EnsembleSampler(
         numchains, ndim, logposterior, backend=backend, pool=pool
     )
-    sampler.run_mcmc(initial_state, numsamples, progress=True) # upwards of 1 1/2 hrs!!
+    sampler.run_mcmc(None, numsamples, progress=True) # upwards of 1 1/2 hrs!!
 
 # add information to h5py file
 with h5py.File(samplesfile, "a") as f:
@@ -446,7 +434,7 @@ with h5py.File(samplesfile, "a") as f:
 # # view attributes of dataset
 # with h5py.File(samplesfile, "a") as f:
 #     print(list(f.keys()))
-#     dset = f["mcmc_samples"]
+#     dset = f["mcmc_samples_AAdata"]
 #     for attr in dset.attrs:
 #         print(f"{attr} : {dset.attrs[attr]}")
 ```
@@ -458,7 +446,7 @@ backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
 ```
 
 ```{code-cell} ipython3
-tau = backend.get_autocorr_time()
+tau = backend.get_autocorr_time(tol=0)
 burnin = int(2 * np.max(tau))
 thin = int(0.5 * np.min(tau))
 flat_samples = backend.get_chain(discard=burnin, flat=True, thin=thin)
@@ -502,8 +490,8 @@ mean = np.mean(flat_samples, axis=0)
 
 corner.overplot_lines(fig, mean, linestyle="--", color="C0")
 corner.overplot_points(fig, mean[np.newaxis], marker="o", linestyle="--", color="C0")
-corner.overplot_lines(fig, popt_AAcoll, color="C3")
-corner.overplot_points(fig, popt_AAcoll[np.newaxis], marker="o", color="C3")
+
+# plt.savefig("../../reports/figures/mcmc_AAdata_corner")
 ```
 
 ```{code-cell} ipython3
@@ -519,20 +507,20 @@ for ind in inds:
                 alpha=0.1
               )
 
-# plot true collision frequency
+# plot AA collision frequency
 plt.plot(freq_data,
-         collisionrate(freq_data / AtomicUnits.energy, popt_AAcoll).real,
+         true_collrate_fn(freq_data / AtomicUnits.energy).real,
          c="k",
-         label="true",
+         label="Avg. Atom",
          lw=2,
          ls='--'
         )
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision rate [au]")
-# plt.ylim(1e-3)
+plt.ylim(1e-3, 1e1)
 plt.legend()
-# plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
+# plt.savefig("../../reports/figures/mcmc_AAdata_collisionsamples")
 ```
 
 ```{code-cell} ipython3
@@ -550,13 +538,13 @@ for ind in inds:
                  "C1", 
                  alpha=0.1)
 # plot data
-plt.loglog(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
+plt.loglog(freq_data, elf_data, c="k", label="Avg. Atom", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylim(1e-6)
 plt.legend()
-# plt.savefig("../../reports/figures/mcmc_modeldata_ELFsamples")
+# plt.savefig("../../reports/figures/mcmc_AAdata_ELFsamples")
 ```
 
 ```{code-cell} ipython3
@@ -574,12 +562,13 @@ for ind in inds:
              "C1", 
              alpha=0.1)
 # plot data
-plt.plot(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
+plt.plot(freq_data, elf_data, c="k", label="Avg. Atom", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.xlim(0, 100)
 plt.legend()
+# plt.savefig("../../reports/figures/mcmc_AAdata_ELFsamples")
 ```
 
 ```{code-cell} ipython3
