First refactored inference notebook

--- a/notebooks/exploratory/5.1-twh-inference-model-data.md
+++ b/notebooks/exploratory/5.1-twh-inference-model-data.md
@@ -26,20 +26,20 @@ This notebook is roughly identical with `5.0-twh-....ipynb` except that the ELF 
 
 ```{code-cell} ipython3
 import numpy as np
-rng = np.random.default_rng()
 import matplotlib.pyplot as plt
 from scipy import optimize
 from functools import partial
+from datetime import datetime
 
 import emcee 
 from multiprocessing import Pool
-
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
 from src.inference.collision_models import collision_activate_decay
-from src.inference.mcmc_inference import unique_hdf5_group
+from src.inference.mcmc_inference import inference_loop, flat_mcmc_samples
 from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
+import src.inference.probability_models as prob
 
 import warnings
 warnings.filterwarnings('ignore')
@@ -72,7 +72,7 @@ dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 # create a new, more regular frequency grid that what exists in the data file
 freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
-wavenum = 1.5 # 1/[angstrom]
+wavenum = 1.55 # 1/[angstrom]
 ```
 
 # Define collision rate model
@@ -86,6 +86,22 @@ def collisionrate(freq, params):
     imcollision = kramerskronig(freq, recollision)
 
     return recollision + 1j * imcollision
+```
+
+# Define the ELF model
+
+using ther Mermin dielectric function and the `collisionrate` function
+
+```{code-cell} ipython3
+dielectric = Mermin(ElectronGas(t, d, dos_fn))
+
+def elfmodel(freq, params):
+    return elec_loss_fn(
+        dielectric,
+        wavenum * AtomicUnits.length,
+        freq,
+        lambda x: collisionrate(x, params)
+        )
 ```
 
 ## Fit our collision rate model to AA collision rate
@@ -118,82 +134,21 @@ plt.legend()
 
 ```{code-cell} ipython3
 # true ELF data
-elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                        wavenum * AtomicUnits.length,
-                        freq_data / AtomicUnits.energy,
-                        lambda x : collisionrate(x, popt_AAcoll)
-                    )
+elf_data = elfmodel(freq_data / AtomicUnits.energy, popt_AAcoll)
 print(f"shape of ELF data = {elf_data.shape}")
 ```
 
 # Define residual function for ELF data
 
 ```{code-cell} ipython3
-def residual_fn(
-    freq, 
-    ydata,
-    dielectricfn, 
-    wavenum, 
-    collisionfn, 
-    params, 
-    type="abs"
-):
-    """
-    Returns a 1D residual function between the data and the normalized ELF model.
-    Can be used with multi-dimensional array inputs as long as `ydata`
-    and `dielectricfn(wavenum, freq, lambda x: collisionfn(x, params))`
-    are broadcastable (if `len(wavenum) == m` and `len(freq) == n`,
-    then `dielectricfn(wavenum, freq, lambda x: collisionfn(x, params))`
-    has a shape (m, n)).
-
-    freq: frequency data points corresponding to output data `ydata`, atomic units
-    ydata: ELF data points, atomic units
-    dielectricfn: dielectric function, a function of `wavenum` and `x`
-    wavenum: wave number value(s), atomic units
-    collisionfn: function for collision rate, depends on `freq` and the
-        parameters `params` we want to optimize
-    params (tuple): parameters that go into collision rate model `collisionfn`
-    type (string): the type of residual function. There are four choices:
-        "abs" - absolute residual: ydata - model
-        "rel" - relative residual: (ydata - model) / ydata
-
-        The different types will tend to emphasize different features in the
-        data that the parameters of the model should be optimized to fit.
-    
-    returns:
-        residual of the model with respect to the data `ydata`. If `ydata`
-        has shape (m, n), then return array has shape (m * n, ).
-    """
-    # normalized ELF calculations
-    elf_calc = elec_loss_fn(dielectricfn,
-                            wavenum,
-                            freq,
-                            lambda x: collisionfn(x, params)
-                           )
-    
-    match type:
-        case "abs":
-            weight = 1
-        case "rel":
-            weight = ydata
-        case _:
-            raise ValueError(f"residual type {type} not accepted")
-            
-    return ((ydata - elf_calc) / weight).flatten()
-```
-
-```{code-cell} ipython3
 # setup
-residual = partial(residual_fn,
-                   freq_data / AtomicUnits.energy,
-                   elf_data,
-                   Mermin(ElectronGas(t, d, dos_fn)),
-                   wavenum * AtomicUnits.length,
-                   collisionrate,
-                   type="rel"
-                  )
+def residual(params):
+    return prob.residual(
+        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="rel"
+    )
+# initial par
 # initial parameter guesses
-initparams = (1,1,1,1)
+initparams = (1, 1, 1, 1)
 
 # optimization results
 optresult = optimize.least_squares(residual, initparams, bounds=(0, np.inf), max_nfev=150)
@@ -215,142 +170,15 @@ plt.legend()
 
 ```{code-cell} ipython3
 plt.loglog(freq_data, elf_data, c="C3", label="true")
-opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                       wavenum * AtomicUnits.length,
-                       freq_data / AtomicUnits.energy,
-                       lambda x: collisionrate(x, optresult.x)
-                      )
+opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
 plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar \omega$ [eV]")
-plt.ylim(1e-6) # resolution of data
+plt.ylim(1e-6)
 plt.legend()
 ```
 
 # Perform MCMC
-
-+++
-
-The collision rate model we are using has parameters that don't run over the whole real line. For example, the `*_height` keyword argument in our parameters dictionary should be strictly positive. We can define our (log) prior distribution to be a uniform distribution over specific ranges of the real line. This will help constrain our parameters within a defined range.
-
-```{code-cell} ipython3
-def logprior(params, limits):
-    """
-    Uniform prior for the parameters
-
-    params: array_like
-        logarithms of the parameters of collision frequency model
-    limits: array_like of length 2
-        limits of the uniform distribution for all parameters/dimensions
-    """
-    params = np.asarray(params)
-    limits = np.asarray(limits)
-    # check that parameters are within their respective limits
-    if np.all(limits[:, 0] < params) and np.all(params < limits[:, 1]):
-        return 0.0
-    return -np.inf
-```
-
-For the log likelihood function, we want to enforce equal preference to all simulation outcomes that match the data to within some uncertainty, regardless of the de-
-tails of the fit. To do that, we use a cutoff function that smooths the boundaries between accepted and rejected values for the parameters. For this notebook,
-we are also considering noise-free data, so we use the _relative_ residual in our likelihood.
-
-```{code-cell} ipython3
-def loglikelihood(
-    params, 
-    x, 
-    y, 
-    dielectricfn, 
-    wavenum, 
-    collisionfn, 
-    cutoff=0.01
-):
-    """
-    log likelihood function that is the log of an N-dimensional cut-off
-    function with soft (exponential) sides.
-
-    params (array_like): parameters that go into collision rate model
-    x: frequency data points corresponding to output data `y`
-    y: ELF data points
-    dielectricfn: dielectric function, a function of `wavenum` and `freq`
-    wavenum: wave number value(s)
-    freq: array of frequency values
-    collisionfn: function for collision rate, depends on `freq` and `params`
-    hyperparams (dict): keyword arguments for the hyperparameters of the
-        likelihood function. Default 0.01 corresponds to a cutoff of roughly
-        1% agreement between data and the model -- any deviation much more
-        than would return a much smaller log likelihood. 
-    
-    returns:
-        log likelihood evaluated for the given parameters at the input `x`.
-    """
-    if cutoff <= 0:
-        raise RuntimeError("cutoff must be positive and nonzero")
-        
-    residual = residual_fn(
-        x,
-        y,
-        dielectricfn,
-        wavenum,
-        collisionfn,
-        params,
-        type="rel"
-    )
-        
-    loglik = -np.max((residual / (np.sqrt(2) * cutoff))**2)
-    
-    return loglik
-```
-
-For the log posterior distribution, we combine both the log prior and log likelihood functions.
-
-```{code-cell} ipython3
-def logposterior_fn(
-    params,
-    x, 
-    y, 
-    dielectricfn, 
-    wavenum, 
-    collisionfn, 
-    priorhyperparams={}, 
-    likhyperparams={}
-):
-    """
-    log posterior pdf.
-
-    params: the parameters for `collisionfn`
-    x: frequency data points corresponding to output data `y`
-    y: ELF data points
-    dielectricfn: dielectric function, a function of `wavenum` and `freq`
-    wavenum: wave number value(s)
-    freq: array of frequency values
-    collisionfn: function for collision rate, depends on `freq` and (the exponential of) `logparams`
-    likhyperparams (dict): keyword arguments for the hyperparameters of the
-        prior function.
-    likhyperparams (dict): keyword arguments for the hyperparameters of the
-        likelihood function.
-    
-    returns:
-        log posterior function that only depends on params of collision rate
-        model.
-    """
-    lgprior = logprior(params, **priorhyperparams)
-    lglik = loglikelihood(params,
-                          x, 
-                          y, 
-                          dielectricfn, 
-                          wavenum, 
-                          collisionfn, 
-                          **likhyperparams
-                         )
-
-    # if either of the prior or likelihood not finite,
-    # return -infinity
-    if not (np.isfinite(lgprior) and np.isfinite(lglik)):
-        return -np.inf
-        
-    return lgprior + lglik
-```
 
 Define a (log) posterior distribution that only depends on the parameters of the collision rate model
 
@@ -363,26 +191,15 @@ prior_lims = [
     [0, 100]
 ]
 
-def logposterior(params):
-    """
-    Helper function for logposterior that treats all but the `logparams` argument as global
-    variables.
-
-    Doing it this way (as opposed to a lambda function, for example) because we need to
-    pickle it for multiprocessing (see emcee docs).
-    """
-    return logposterior_fn(params,
-                           freq_data / AtomicUnits.energy,
-                           elf_data,
-                           Mermin(ElectronGas(t, d, dos_fn)),
-                           wavenum * AtomicUnits.length,
-                           collisionrate,
-                           priorhyperparams = {"limits": prior_lims},
-                           likhyperparams = {"cutoff": lik_cutoff}
-                          )
-```
-
-```{code-cell} ipython3
+logprior = prob.UniformLogPrior(prior_lims)
+loglikelihood = prob.SoftCutoffLogLikelihood(
+    elf_data,
+    freq_data / AtomicUnits.energy,
+    elfmodel,
+    lik_cutoff,
+    residualtype="rel"
+)
+logposterior = prob.LogPosterior(logprior, loglikelihood)
 logposterior(optresult.x)
 ```
 
@@ -396,8 +213,6 @@ dataset = "mcmc samples - model data - rel. residual - 4 params"
 ```
 
 ```{code-cell} ipython3
-import h5py
-from datetime import datetime
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
     "input data info" : f"""Data generated using collision rate model
@@ -419,27 +234,11 @@ numsamples = 15_000
 ```
 
 ```{code-cell} ipython3
-# # avoid overwriting datasets
-# dataset = unique_hdf5_group(samplesfile, dataset)
-backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
-backend.reset(numchains, ndim)
-
 # randomly initialize chains within the boundaries
 rng = np.random.default_rng()
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
-# perform ensemble MCMC sampling of logposterior
-with Pool() as pool:
-    sampler = emcee.EnsembleSampler(
-        numchains, ndim, logposterior, backend=backend, pool=pool
-    )
-    sampler.run_mcmc(initial_state, numsamples, progress=True) # upwards of 1 1/2 hrs!!
-
-# add information to h5py file
-with h5py.File(samplesfile, "a") as f:
-    dset = f[dataset]
-    for k, v in runinfo.items():
-        dset.attrs[k] = v
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
 ```
 
 ```{code-cell} ipython3
@@ -455,19 +254,7 @@ with h5py.File(samplesfile, "a") as f:
 
 ```{code-cell} ipython3
 backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
-```
-
-```{code-cell} ipython3
-tau = backend.get_autocorr_time()
-burnin = int(2 * np.max(tau))
-thin = int(0.5 * np.min(tau))
-flat_samples = backend.get_chain(discard=burnin, flat=True, thin=thin)
-
-print("Mean autocorrelation time: {0:.3f} steps".format(np.mean(tau)))
-print("burn-in: {0}".format(burnin))
-print("thin: {0}".format(thin))
-print("flat chain shape: {0}".format(flat_samples.shape))
-print("Mean acceptance fraction: {0:.3f}".format(np.mean(backend.accepted / backend.iteration)))
+flat_samples = flat_mcmc_samples(backend)
 ```
 
 # MCMC results
