--- a/notebooks/exploratory/6.0-twh-dc-conductivity.md
+++ b/notebooks/exploratory/6.0-twh-dc-conductivity.md
@@ -14,11 +14,11 @@ kernelspec:
 
 # Extracting DC conductivity from inference data
 
-The DC conductivity is closely related to the collision frequency [1]
+The DC conductivity is closely related to the collision frequency [[1](#dc_formula)]
 $$\sigma_\mathrm{DC} = \lim_{\omega \rightarrow 0} \frac{n_e e^2}{m_e \nu(\omega; \Theta)}$$
 where $n_e$ is the electron density and $\nu(\omega; \Theta)$ is the collision frequency for a given set of parameters $\Theta$.
 
-We can use the MCMC samples of collision frequency parameters $\Theta$ to determine a mean and standard deviation of the DC conductivity using this formula [2] and compare the results. For example, the mean can be computed like
+We can use the MCMC samples of collision frequency parameters $\Theta$ to determine a mean and standard deviation of the DC conductivity using this formula [[2](#mean)] and compare the results. For example, the mean can be computed like
 \begin{align} E(\sigma_\mathrm{DC} | y) &= \lim_{\omega \rightarrow 0} \int \sigma(\omega; \Theta) p(\Theta | y) d\Theta \\
 &\approx \frac{1}{M} \sum_{m = 1}^M \sigma(\omega; \Theta^{(m)})
 \end{align}
@@ -26,20 +26,21 @@ We can use the MCMC samples of collision frequency parameters $\Theta$ to determ
 where $\sigma(\omega; \Theta)$ is the quantity to the right of the limit in the conductivity formula above, and $p(\Theta | y)$ is the posterior distribution of the collision frequency parameters for a given set of ELF/DSF data $y$. The last line approximates the integral using Monte Carlo and the MCMC samples $\Theta^{(m)} \sim p(\Theta | y)$.
 
 ---
-[1] There is an alternative formula for the DC conductivity that is expressed in terms of the dielectric function
+[1]<a id='dc_formula'></a> There is an alternative formula for the DC conductivity that is expressed in terms of the dielectric function
 $$ \sigma_\mathrm{DC} = \lim_{\omega \rightarrow 0} \frac{\omega}{4 \pi} \mathrm{Im}\{ \epsilon(q=0, \omega)\}$$
 where $\epsilon$ is the dielectric function evaluated at $q=0$. In particular, we consider the Mermin dielectric function
-$$ \epsilon^\mathrm{M}(q, \omega) = ,$$
+$$ \epsilon^\mathrm{M}(q, \omega) =  1 + \frac{(\omega+i\nu)[\epsilon^\mathrm{RPA}(q, \omega+i\nu) - 1]}{\omega + i\nu \frac{\epsilon^\mathrm{RPA}(q, \omega+i\nu) - 1}{\epsilon^0(q,0)-1}},$$
 which depends on the Random Phase Approximation (RPA) dielectric function $\epsilon^\mathrm{RPA}(q, \omega)$. In the limit of $q \rightarrow 0$, the RPA dielectric is
-$$\epsilon^\mathrm{RPA}(\omega) = 1 - \frac{\omega_p^2}{\omega^2}.$$
-where $\omega_p^2 = \frac{4 \pi e^2 n_e}{m_e}$ is the plasma frequency.
+$$\epsilon^\mathrm{RPA}(\omega) = 1 - \frac{\omega_p^2}{\omega^2}$$
+where $\omega_p^2 = \frac{4 \pi e^2 n_e}{m_e}$ is the plasma frequency. We also have that
+$$ \lim_{q \rightarrow 0} \epsilon^\mathrm{RPA}(q, 0) = \infty.$$
 Thus, for $q \rightarrow 0$, the Mermin dielectric function becomes the Drude dielectric function
-$$ \epsilon^\mathrm{M}(q \rightarrow 0, \omega) = \epsilon^\mathrm{D}(\omega) = 1 - \frac{\omega_p^2}{\omega[\omega + i \nu(\omega)]}$$
+$$ \epsilon^\mathrm{M}(q \rightarrow 0, \omega) = \epsilon^\mathrm{D}(\omega) = 1 - \frac{\omega_p^2}{\omega[\omega + i \nu(\omega)]}.$$
 Finally, we have the DC conductivity for the Mermin dielectric function
 $$ \sigma_\mathrm{DC} = \lim_{\omega \rightarrow 0} \frac{\omega}{4 \pi} \mathrm{Im}\{\epsilon^\mathrm{D}(\omega)\} = \frac{1}{4 \pi} \mathrm{Im}\{1 - \frac{\omega_p^2}{i\nu(0)} \} = \frac{\omega_p^2}{4 \pi \nu(0)},$$
 which agrees with the first formula for the DC conductivity.
 
-[2] This is thanks to the so called "Law of the unconcious statistician", which states that if $X$ is a random variable and $Y = r(X)$ for some function $r$, then the mean of the random variable $Y$ is $E(Y) = \int r(x) p(x) dx$, where $p(x)$ is the probability distribution function of the random variable $X$.
+[2]<a id='mean'></a> This is thanks to the so called "Law of the unconcious statistician", which states that if $X$ is a random variable and $Y = r(X)$ for some function $r$, then the mean of the random variable $Y$ is $E(Y) = \int r(x) p(x) dx$, where $p(x)$ is the probability distribution function of the random variable $X$.
 
 +++
 
